--- a/demo/index.html
+++ b/demo/index.html
@@ -35,6 +35,9 @@
             </vue-infinite-autocomplete>
             <div class='example-btn' @click='changeOptions'>change options</div>
           </div>
+          <div class="example-item">
+            <h3>See Console Logs</h3>
+          </div>
         </div>
       </template>
     </div>
